--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Bootcamp</string>
     <string name="en_attendant_la_suite">En attendant la suite</string>
     <string name="button">Button</string>
+    <string name="textview">TextView</string>
 </resources>
